--- a/index.html
+++ b/index.html
@@ -1,1 +1,82 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Logistic Company</title>
+  <style>
+    /* Add your custom CSS styles here */
+    body {
+      font-family: Arial, sans-serif;
+      margin: 0;
+      padding: 0;
+    }
+    header {
+      background-color: #333;
+      color: #fff;
+      padding: 10px;
+      text-align: center;
+    }
+    nav {
+      background-color: #444;
+      color: #fff;
+      padding: 10px;
+      text-align: center;
+    }
+    nav a {
+      color: #fff;
+      text-decoration: none;
+      padding: 10px;
+    }
+    nav a:hover {
+      background-color: #555;
+    }
+    footer {
+      background-color: #333;
+      color: #fff;
+      padding: 10px;
+      text-align: center;
+      position: absolute;
+      bottom: 0;
+      width: 100%;
+    }
+    /* Add more CSS styles for the content section if needed */
+    .content {
+      padding: 20px;
+      text-align: center;
+    }
+  </style>
+</head>
+<body>
+  <header>
+    <h1>Logistic Company</h1>
+  </header>
+
+  <nav>
+    <a href="#">Home</a>
+    <a href="#">Services</a>
+    <a href="#">About Us</a>
+    <a href="#">Contact</a>
+  </nav>
+
+  <div class="content">
+    <h2>Welcome to Our Logistic Company!</h2>
+    <p>
+      We are a reliable and efficient logistic company that offers a wide range of services to meet your transportation needs.
+      Our experienced team is dedicated to providing top-notch solutions for your shipping and delivery requirements.
+    </p>
+    <p>
+      Whether you need international freight forwarding, warehousing, supply chain management, or last-mile delivery,
+      we've got you covered with our tailored logistic solutions.
+    </p>
+    <p>
+      Explore our website to learn more about our services and how we can assist you in optimizing your logistics operations.
+    </p>
+  </div>
+
+  <footer>
+    <p>&copy; 2023 Logistic Company. All rights reserved.</p>
+  </footer>
+</body>
+</html>
 
